horizontal scroll fix

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,6 @@
   margin: 0 auto;
   padding: 1rem;
   text-align: center;
-  width: 100%;
-  /* height: 100vh; */
 }
 
 .logo {
